fixed spacing on portfolio

--- a/style.css
+++ b/style.css
@@ -169,18 +169,32 @@ h1{
 }
 
 /*  PORTFOLIO */
-
+#port-paragraph-container{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+#port-container-container{
+    padding-top: 0px;
+}
 #port-container{
-    background-color: hsl(0, 0%, 10%);
+    background-color: hsl(0, 0%, 20%);
     border: 1px solid hsl(0, 0%, 30%);
     border-radius: 25px;
-    margin: 30px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project-container{
+    margin-top: auto;
 }
 .project-label{
     font-size: 1.5em;
     text-align: center;
+    max-width: 200px;
 }
 .project{
     width: 200px;
